change the names of files & make the guard work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,7 @@
     "editor.tabSize": 4,
     "javascript.preferences.quoteStyle": "single",
     "javascript.format.semicolons": "insert",
+    "cSpell.words": [
+        "Moayed"
+    ],
   }
